feat(SEP-OBG1): implemented Ods strategy, add and refactor test.